testdata/baselines/reference/compiler/jsxLibraryManagedAttributesUnexpectedType.errors.txt
jsxLibraryManagedAttributesUnexpectedType.tsx(5,12): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


==== jsxLibraryManagedAttributesUnexpectedType.tsx (1 errors) ====
    type JsxLibraryManagedAttributes = number;
    
    local C = nil as any as () => any;
    
    local x = <C />;
               ~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
    